fixed overflow issue, added styles to map

--- a/main.css
+++ b/main.css
@@ -53,7 +53,6 @@ h3 {
 }
 
 /* Main Styles */
-
 body {
     font-family: 'Lato', sans-serif; 
     font-size: 1rem;
@@ -92,21 +91,57 @@ input {
 }
 
 /* Video Styles */
+.videos {
+    max-height: 100%;
+    overflow: auto;
+}
 .ytHeader {
     text-align: center;
     margin: 0;
+    text-transform: uppercase;
 }
 .youtubeDescription {
-    margin: 1;
+    margin: 20px;
     text-align: center;
     font-family: 'Lato', sans-serif; 
+    color: black;
+	border: 1px solid #777777;
+	border-radius: 10px;
+	padding: 20px 20px;
+	outline: none;
+	font-size: 14px;
 }
 
 /* map Styles */
+.map {
+    max-height: 100%;
+    overflow: auto;
+}
+
+#map-info-list {
+    padding: 0;
+}
 
 #map {
     height: 25%;
   }
+
+.mapHeader {
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.mapInfo {
+    text-align: center;
+    font-family: 'Lato', sans-serif; 
+    color: black;
+	border: 1px solid #777777;
+	border-radius: 10px;
+	padding: 10px 15px;
+	outline: none;
+	font-size: 14px;
+}
 
 /* Footer */
 
@@ -139,7 +174,7 @@ input {
         "videos videos map"
         "footer footer footer";
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100vh 1fr 5%;
+    grid-template-rows: 100vh minmax(0, 1fr) 5%;
 }
 
 .box {
@@ -181,11 +216,11 @@ padding: 8px;
     .wrapper {
         grid-template-areas:
         "header"
-        "map"
         "videos"
+        "map"
         "footer";
         grid-template-columns: 100%;
-        grid-template-rows: 100vh 1fr 1fr 4px;
+        grid-template-rows: 100vh minmax(0,1fr) 4px;
     }
 }
 
@@ -196,5 +231,8 @@ padding: 8px;
     }
     .ex-btn {
         font-size: 12px;
+    }
+    h1 {
+        font-size: 2rem;
     }
 }
